SLCORE-650 Address review comments